--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BrainScratcher</title>
+  <title>BrainScratcher! 🧠</title>
+
+  <link rel="stylesheet" href="style.css">
 
   <meta http-equiv="refresh" content="0; url=http://brainscratcher.rf.gd/" />
 </head>
 <body>
-    PLEASE WAIT WHILE I LOAD!!!
+  <div class="mid">
+    <h1>PLEASE WAIT WHILE I LOAD!</h1>
+  </div>
 </body>
 </html>
